tests/data/motifs/bad/test_pfms_bad3.jaspar
>MA0006.1	Ahr::Arnt
3      0      0      0      0      0
8      0     23      0      0      0
bad line